--- a/AspImp.html
+++ b/AspImp.html
@@ -69,7 +69,7 @@
         <div class="row text-center">
           <div class="col-md-5" style=""><img class="img-fluid d-block my-3 mx-auto" src="assets/imgs/37330716506_fb6181042d_c.jpg" width="100%"></div>
           <div class="col-md-2" style=""><img class="img-fluid d-block float-center my-3 mx-auto mt-5" src="assets/imgs/PinClipart.com_right-clipart_16622.png" width="100%"></div>
-          <div class="col-md-5" style=""><img class="img-fluid d-block my-3 mx-auto" src="../../../TFG Carla/Presentaciones/el-e-waste-contaminacion-electronica-1.png" width="150%"></div>
+          <div class="col-md-5" style=""><img class="img-fluid d-block my-3 mx-auto" src="assets/imgs/el-e-waste-contaminacion-electronica-1.png" width="150%"></div>
         </div>
         <div class="row">
           <div class="col-md-6" style="">
